refine javadoc for command, update readme & diag