@@ -2,52 +2,50 @@ import java.awt.Color;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 import java.util.Queue;
 
-import controller.command.GreyCommand;
+import controller.command.AdjustBrightnessCommand;
 import controller.command.ICommand;
 import model.imagefile.ImageFile;
 import model.imagefile.ImageFileNoAlpha;
-import model.operation.SingleChannelOperator;
 
 /**
- * Class that tests the {@code red-component} command.
+ * Class that tests the {@code darken} command.
  */
-public class RGrayCommand extends ACommandTest {
+public class DarkeningCommandTest extends ACommandTest {
   @Override
   public ICommand provideCommand() {
-    return new GreyCommand(SingleChannelOperator.Red);
+    return new AdjustBrightnessCommand(false);
   }
 
   @Override
   public ArrayList<Queue<String>> provideInputs() {
     ArrayList<Queue<String>> list = new ArrayList<>();
-    list.add(new ArrayDeque<>(Arrays.asList("testImg", outputName())));
+    list.add(new ArrayDeque<>(Arrays.asList("50", "testImg", outputName())));
     return list;
   }
 
   @Override
   public ArrayList<Queue<String>> errorInputs() {
     ArrayList<Queue<String>> list = new ArrayList<>();
-    list.add(new ArrayDeque<>(Arrays.asList("50", "testImg", outputName())));
-    list.add(new ArrayDeque<>(Arrays.asList("50", "testImg")));
-    list.add(new ArrayDeque<>(List.of("testImg")));
+    list.add(new ArrayDeque<>(Arrays.asList("50", outputName())));
+    list.add(new ArrayDeque<>(Arrays.asList("50", "testImg2", outputName())));
+    list.add(new ArrayDeque<>(Arrays.asList("50", "testImg", outputName(), "asdrf")));
+    list.add(new ArrayDeque<>(Arrays.asList("5.2", "testImg", outputName())));
     return list;
   }
 
   @Override
   public ImageFile[] provideOutputs() {
     return new ImageFile[]{new ImageFileNoAlpha(new Color[][]{
-            {new Color(10, 10, 10), new Color(20, 20, 20), new Color(30, 30, 30)},
-            {new Color(40, 40, 40), new Color(50, 50, 50), new Color(60, 60, 60)}
-    })};
+            {new Color(0, 0, 0), new Color(0, 0, 0), new Color(0, 0, 0)},
+            {new Color(0, 0, 0), new Color(0, 1, 2), new Color(10, 11, 12)}})};
   }
 
   @Override
   public String[] viewOutputs() {
     return new String[]{
-        "> Red-component image of testImg has been created and is named resultImg.\n"};
+        "> Darkened image (value: 50) of testImg has been created and is named resultImg.\n"};
   }
 
   @Override
