@@ -1,7 +1,8 @@
-import java.awt.*;
+import java.awt.Color;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Queue;
 
 import controller.command.GreyCommand;
@@ -10,6 +11,9 @@ import model.imagefile.ImageFile;
 import model.imagefile.ImageFileNoAlpha;
 import model.operation.SimpleArithmeticChannelOperator;
 
+/**
+ * Class that tests the {@code value-component} command.
+ */
 public class VGrayCommand extends ACommandTest {
   @Override
   public ICommand provideCommand() {
@@ -18,31 +22,32 @@ public class VGrayCommand extends ACommandTest {
 
   @Override
   public ArrayList<Queue<String>> provideInputs() {
-    ArrayList<Queue<String>> list = new ArrayList<Queue<String>>();
-    list.add(new ArrayDeque<String>(Arrays.asList("testImg", outputName())));
+    ArrayList<Queue<String>> list = new ArrayList<>();
+    list.add(new ArrayDeque<>(Arrays.asList("testImg", outputName())));
     return list;
   }
 
   @Override
   public ArrayList<Queue<String>> errorInputs() {
-    ArrayList<Queue<String>> list = new ArrayList<Queue<String>>();
-    list.add(new ArrayDeque<String>(Arrays.asList("50", "testImg", outputName())));
-    list.add(new ArrayDeque<String>(Arrays.asList("50", "testImg")));
-    list.add(new ArrayDeque<String>(Arrays.asList( "testImg")));
+    ArrayList<Queue<String>> list = new ArrayList<>();
+    list.add(new ArrayDeque<>(Arrays.asList("50", "testImg", outputName())));
+    list.add(new ArrayDeque<>(Arrays.asList("50", "testImg")));
+    list.add(new ArrayDeque<>(List.of("testImg")));
     return list;
   }
 
   @Override
   public ImageFile[] provideOutputs() {
     return new ImageFile[]{new ImageFileNoAlpha(new Color[][]{
-            {new Color(12,12,12), new Color(22,22,22), new Color(32,32,32)},
-            {new Color(42,42,42), new Color(52,52,52), new Color(62,62,62)}
+            {new Color(12, 12, 12), new Color(22, 22, 22), new Color(32, 32, 32)},
+            {new Color(42, 42, 42), new Color(52, 52, 52), new Color(62, 62, 62)}
     })};
   }
 
   @Override
   public String[] viewOutputs() {
-    return new String[]{"> Value-component image of testImg has been created and is named resultImg.\n"};
+    return new String[]{
+        "> Value-component image of testImg has been created and is named resultImg.\n"};
   }
 
   @Override
